write curd operations ---> writing integration tests for customer finished...starting reading